--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,12 +16,10 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2022",
+    "target": "es2021",
     "module": "es2020",
-    "lib": [
-      "es2018", 
-      "dom"
-    ],
+    "lib": ["es2018", "dom"],
+    "types": ["cypress"],
     "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
